fix: styling. Make sure the backdrop works on Safari, and the navbar dropdown will always be only be on top

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,6 +1,7 @@
 nav {
   position: fixed;
   margin: 1.25rem;
+  z-index: 999;
 }
 
 .nav-dropdown-button {
