--- a/src/css/Videos.css
+++ b/src/css/Videos.css
@@ -47,6 +47,12 @@
   z-index: 2;
 }
 
+.frame.vert .paper-border::before,
+.frame.vert.paper-border::after {
+  top: -0.2rem;
+  bottom: -0.2rem;
+}
+
 .paper {
   background-color: var(--bg);
   width: 100%;
@@ -66,6 +72,7 @@
   left: 0.25rem;
   right: 0.25rem;
   z-index: 4;
+  background-color: rgba(255, 255, 255, 0.01);
   background-image: repeating-linear-gradient(
       0deg,
       rgb(203, 196, 196) 0px,
