--- a/src/css/index.css
+++ b/src/css/index.css
@@ -61,6 +61,7 @@ body {
   font-family: "Inconsolata", "Courier New", Courier, monospace;
   cursor: url("/assets/cursor.png"), auto;
   background-color: var(--bg-light);
+  color: black;
 }
 
 .wrapper {
